fixed spacing, margins and aesthetic changes

--- a/src/app/resume/resume.component.scss
+++ b/src/app/resume/resume.component.scss
@@ -12,21 +12,47 @@
   padding: 15px;
 }
 
+h1 {
+  font-family: 'Amaranth', sans-serif;
+}
+
 .experience {
   grid-area: experience;
+  & p {
+    font-size: 13px;
+  }
 }
 
 .left-profile {
   display: flex;
   flex-flow: column;
+  font-size: 14px;
   grid-area: profile;
   width: 100%;
+  & .personal-info {
+    list-style: none;
+  }
 }
 
 .work-experience {
   grid-area: work;
   padding: 2%;
-  font-size: 19px;
+  font-size: 15px;
+  & div {
+    margin: 4px;
+  }
+  & ul {
+    margin-top: 7px;
+  }
+  & li {
+    margin-top: 6px;
+  }
+  & .timeline {
+    margin-left: 20px;
+  }
+  & h3 {
+    margin-bottom: 10px;
+  }
 }
 
 .education {
@@ -64,6 +90,7 @@
 
 .left-profile>h4 {
   padding-top: 1em;
+  font-family: 'Amaranth', sans-serif;
 }
 
 .timeline {
@@ -80,7 +107,9 @@ section {
   float: left;
   min-height: 300px;
   width: 100%;
-  border-radius: 4px;
+  border-radius: 4px; // & div {
+  //   margin: 10px;
+  // }
 }
 
 .filter {
@@ -95,8 +124,7 @@ section {
   color: white;
   background: #1271C7;
   &:hover {
-    cursor: pointer;
-    text-decoration: underline;
+    cursor: pointer; // text-decoration: underline;
     background: black;
   }
 }
@@ -135,8 +163,9 @@ section>div {
 
 .thumbnails img {
   display: block;
-  height: 23vh;
-  width: 29vh;
+  height: 170px;
+  width: 100%;
+  max-width: 250px;
   border-radius: 7px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -webkit-transition: all .2 ease-in-out;
@@ -188,11 +217,19 @@ section>div {
   font-family: 'Quantico', sans-serif; // width: 50px;
   color: #1271C7;
   text-shadow: 2px 2px #000000;
-  font-size: 25px;
+  font-size: 22px;
   position: absolute; // transition: .5s ease;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.card.projects .thumbnails:hover {
+  cursor: pointer;
+}
+
+.card.projects .filter {
+  text-decoration: none;
 }
 
 a:focus[data-filter] {
@@ -319,6 +356,7 @@ a[data-filter="c#"]:focus~div:not([data-filter="c#"]) img {
   }
   .thumbnails img {
     width: 100%;
+    margin-left: 15%
   }
   .buttonDownload {
     margin: 0 auto;
